[project]
name = "ComfyUI-LTX2-MultiGPU"
description = "Hybrid Multi-GPU split loader for LTX 2.3 GGUF on 2x T4 (Kaggle). Made by THE-ANGEL-AI (The Angel Studio). Replaces ComfyUI-MultiGPU DisTorch2 regex splitting with explicit block-aware sharding and forward-hook hidden-state transfer."
# 2026-07-01 — synchronized with CHANGELOG.md v0.6.0-pre (SoloAngel/SP-release + polish-bundle).
# v0.2.1: HIGH fixes (1) sage_attention_scratch key unification across
# scripts/diagnostic.py + core/memory_tracker.py, (2) silent dtype drop в
# _lock_inner_to._no_op_to — теперь dtype/memory_format/non_blocking
# пробрасываются в original_to при device-move. MED дополнения: donor_device
# в apply_strategy + DeviceStrategy INPUT_TYPES; loras_estimate в pipeline
# projection (memory_tracker._project()). См. CHANGELOG v0.2.1 details.
version = "0.6.0-pre"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "The Angel Studio", email = "gi.the.angel@gmail.com" }
]
keywords = ["ltx", "ltx2", "video", "multi-gpu", "gguf", "kaggle", "t4", "split"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
Repository = "https://github.com/THE-ANGEL-AI/ComfyUI-LTX2-MultiGPU"
Issues = "https://github.com/THE-ANGEL-AI/ComfyUI-LTX2-MultiGPU/issues"

# ComfyUI Registry conventions (https://docs.comfy.org/registry/specifications)
#
# ⚠️ ComfyUI Manager читает центральную базу custom-node-list.json для
#    click-through URL — локальный pyproject.toml НЕ переопределяет её.
#    Чтобы ссылка вела на THE-ANGEL-AI репо, нужно зарегистрировать
#    пакет в ComfyUI-Manager через PR:
#    https://github.com/Comfy-Org/ComfyUI-Manager
#
# Поля author + name + PublisherId — для атрибуции в Manager UI.
# reference — запасной URL для клика (читается НЕ всеми версиями).
[tool.comfy]
PublisherId = "THE-ANGEL-AI"
DisplayName = "LTX-2 MultiGPU"
author = "THE-ANGEL-AI"
name = "ComfyUI-LTX2-MultiGPU"
Icon = "assets/icon.png"
reference = "https://github.com/THE-ANGEL-AI/ComfyUI-LTX2-MultiGPU"
requires-comfyui = ">=0.3.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "."]
